# kulutused

./: .flake8  .gitignore  README.md  manage.py  pyproject.toml
kulutused/: admin.py  asgi.py  forms.py  settings.py  urls.py  views.py  wsgi.py
kulutused/migrations/: 0001_initial.py
kulutused/models/: __init__.py  debt.py
templates/: base.html
templates/kulutused/: create_debt.html  edit_debt.html  home.html
templates/registration/: login.html
