[tool.poetry]
name = "kulutused"
version = "0.1.0"
description = ""
authors = ["Karlis Suvi <45097959+ks129@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
django-bootstrap5 = "^23.1"
django-crispy-forms = "^2.0"
django-environ = "^0.10.0"
argon2-cffi = "^21.3.0"
crispy-bootstrap5 = "^0.7"
django-bootstrap-icons = "^0.8.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pep8-naming = "^0.13.3"
flake8-todo = "^0.7"
flake8-string-format = "^0.3.0"
flake8-tidy-imports = "^4.8.0"
flake8-import-order = "^0.18.2"
flake8-docstrings = "^1.7.0"
flake8-bugbear = "^23.3.23"
flake8-bandit = "^4.1.1"
flake8-annotations = "^3.0.0"
taskipy = "^1.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = "flake8"
start = "python manage.py runserver"
makemigrations = "python manage.py makemigrations"
migrate = "python manage.py migrate"
